--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -1,7 +1,7 @@
 {
-  "personalquotes.name.quote" : "quote",
-  "personalquotes.description.quote" : "Returns your chosen personal quote.",
+  "personalquotes.quote.name" : "quote",
+  "personalquotes.quote.description" : "Returns your chosen personal quote.",
 
-  "personalquotes.name.quote.quote" : "quote",
-  "personalquotes.description.quote.quote" : "Which personal quote do you want to post?"
+  "personalquotes.quote.quote.name" : "quote",
+  "personalquotes.quote.quote.description" : "Which personal quote do you want to post?"
 }
