--- a/localization/pl.json
+++ b/localization/pl.json
@@ -1,7 +1,7 @@
 {
-  "personalquotes.name.quote" : "cytat",
-  "personalquotes.description.quote" : "Zwraca wybrany przez użytkownika cytat.",
+  "personalquotes.quote.name" : "cytat",
+  "personalquotes.quote.description" : "Zwraca wybrany przez użytkownika cytat.",
 
-  "personalquotes.name.quote.quote" : "cytat",
-  "personalquotes.description.quote.quote" : "Który osobisty cytat chcesz zamieścić?"
+  "personalquotes.quote.quote.name" : "cytat",
+  "personalquotes.quote.quote.description" : "Który osobisty cytat chcesz zamieścić?"
 }
