--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -3,12 +3,15 @@
   "personalquotes.quote.description": "Returns your chosen personal quote.",
   "personalquotes.quote.quote.name": "quote",
   "personalquotes.quote.quote.description": "Which personal quote do you want to post?",
+
   "personalquotes.clear.name": "clear",
   "personalquotes.clear.description": "Deletes **ALL** your personal quotes.",
+
   "personalquotes.code.name": "code",
   "personalquotes.code.description": "Returns your chosen personal quote in code.",
   "personalquotes.code.quote.name": "quote",
   "personalquotes.code.quote.description": "For which personal quote do you want to see the code?",
+
   "personalquotes.add.name": "add",
   "personalquotes.add.description": "Adds a personal quote.",
   "personalquotes.add.quote.name": "quote",
@@ -17,10 +20,43 @@
   "personalquotes.add.response.description": "What should the quote say?",
   "personalquotes.add.attachment.name": "attachment",
   "personalquotes.add.attachment.description": "File to attach to the quote.",
+
   "personalquotes.delete.name": "delete",
   "personalquotes.delete.description": "Deletes a personal quote.",
   "personalquotes.delete.quote.name": "quote",
   "personalquotes.delete.quote.description": "Which personal quote do you want to delete?",
+
   "personalquotes.list.name": "list",
-  "personalquotes.list.description": "Returns all your personal quotes in a list format"
+  "personalquotes.list.description": "Returns all your personal quotes in a list format",
+
+  "ban.ban.name": "ban",
+  "ban.ban.description": "[STAFF] Bans a member from the server",
+  "ban.ban.member.name": "member",
+  "ban.ban.member.description": "Which member do you want to ban?",
+  "ban.ban.message.name": "message",
+  "ban.ban.message.description": "What message do you want to attach to the ban?",
+
+  "case.check.name": "check",
+  "case.check.description": "[STAFF] Checks a case",
+  "case.check.caseid.name": "caseid",
+  "case.check.caseid.description": "Which case do you want check?",
+
+  "case.close.name": "close",
+  "case.close.description": "[STAFF] Closes a case",
+  "case.close.caseid.name": "caseid",
+  "case.close.caseid.description": "Which case do you want close?",
+  "case.close.message.name": "message",
+  "case.close.message.description": "Optional note for closing the case",
+
+  "case.update.name": "update",
+  "case.update.description": "[STAFF] Updates a case",
+  "case.update.caseid.name": "caseid",
+  "case.update.caseid.description": "Which case do you want update?",
+  "case.update.message.name": "message",
+  "case.update.message.description": "Optional note for updating the case",
+
+  "case.list.name": "list",
+  "case.list.description": "[STAFF] Lists all cases for a member",
+  "case.list.member.name": "member",
+  "case.list.member.description": "Whose cases do you want to see?"
 }
