--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -1,4 +1,30 @@
 {
+  "poll.create.name": "create",
+  "poll.create.description": "Creates a poll",
+  "poll.create.title.name": "title",
+  "poll.create.title.description": "Title of the poll.",
+  "poll.create.options.name": "options",
+  "poll.create.options.description": "Voting options for the poll, use [option] [option]... max 20 options.",
+  "poll.create.locked.name": "locked",
+  "poll.create.locked.description": "Locks voting to only once, without being able to change the vote later.",
+
+  "poll.vote.name": "vote",
+  "poll.vote.description": "Vote on a poll.",
+  "poll.vote.id.name": "id",
+  "poll.vote.id.description": "Select the id of the poll you want to vote on.",
+
+  "poll.close.name": "close",
+  "poll.close.description": "Close a poll.",
+  "poll.close.id.name": "id",
+  "poll.close.id.description": "Select the id of the poll you want to close.",
+
+  "poll.settings.name": "settings",
+  "poll.settings.description": "Change the settings on a poll.",
+  "poll.settings.id.name": "id",
+  "poll.settings.id.description": "Select the id of the poll you to change its settings.",
+  "poll.settings.setting.name": "setting",
+  "poll.settings.setting.description": "Which setting do you want to toggle?",
+
   "personalquotes.quote.name": "quote",
   "personalquotes.quote.description": "Returns your chosen personal quote.",
   "personalquotes.quote.quote.name": "quote",
