--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -1,12 +1,18 @@
 {
   "poll.create.name": "create",
-  "poll.create.description": "Creates a poll",
   "poll.create.title.name": "title",
-  "poll.create.title.description": "Title of the poll.",
   "poll.create.options.name": "options",
-  "poll.create.options.description": "Voting options for the poll, use [option] [option]... max 20 options.",
   "poll.create.locked.name": "locked",
+  "poll.create.anonymous.name": "anonymous",
+  "poll.create.multivote.name": "multivote",
+  "poll.create.autolock.name": "autolock",
+  "poll.create.description": "Creates a poll",
+  "poll.create.title.description": "Title of the poll.",
+  "poll.create.options.description": "Voting options for the poll, use [option] [option]... max 20 options.",
   "poll.create.locked.description": "Locks voting to only once, without being able to change the vote later.",
+  "poll.create.anonymous.description": "Votes are anonymous, and will not show up in the poll embed.",
+  "poll.create.multivote.description": "People can select up to this amount of votes.",
+  "poll.create.autolock.description": "Automatically locks the poll after X votes.",
 
   "poll.vote.name": "vote",
   "poll.vote.description": "Vote on a poll.",
