--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -28,6 +28,8 @@
   "poll.close.description": "Close a poll.",
   "poll.close.id.name": "id",
   "poll.close.id.description": "Select the id of the poll you want to close.",
+  "poll.close.post.name": "post",
+  "poll.close.post.description": "Add the poll results to the close message.",
 
   "poll.settings.name": "settings",
   "poll.settings.description": "Change the settings on a poll.",
